Fixed shift-n and shift-p bug, and fixed spacing.

--- a/www/index.css
+++ b/www/index.css
@@ -70,32 +70,30 @@ ol, ul, li {
 	pointer-events: none;
 }
 
-#playlists {
+#playlists, #playlist {
 	position: absolute;
 	top: 144px;
-	right: 0;
-	width: 256px;
 	height: calc(100% - 128px - 64px);
-	padding: 16px;
-	background: var(--fg);
-	border-top-left-radius: 16px;
-	border-bottom-left-radius: 16px;
-	color: var(--bg);
-}
-
-#playlist {
-	position: absolute;
-	top: 144px;
-	left: 0;
-	bottom: 48px;
 	padding: 16px;
 	overflow-y: auto;
 	background: var(--fg);
+	color: var(--bg);
+	bottom: 48px;
+}
+
+#playlists {
+	right: 0;
+	width: 256px;
+	border-top-left-radius: 16px;
+	border-bottom-left-radius: 16px;
+}
+
+#playlist {
+	left: 0;
 	border-top-right-radius: 16px;
 	border-bottom-right-radius: 16px;
 	min-width: 512px;
 	max-width: calc(100vw - 240px - 16px);
-	color: var(--bg);
 }
 
 #message {
@@ -112,39 +110,44 @@ ol, ul, li {
 
 #newSong {
 	display: none;
-	margin-top: 16px;
-	width: 368px;
+	margin-top: 4px;
+	width: 100%;
+	font-size: 0;
 }
 
-#newSongName, #newSongId {
-	display: block;
-	width: 256px;
+input {
 	height: 24px;
 	border: 1px solid var(--mg);
 	padding: 2px;
+}
+
+#newSongName {
+	width: calc(100% - 16px - 64px - 16px - 96px);
+}
+
+#newSongId {
+	margin-left: 16px;
+	width: 64px;
 }
 
 #newSongButton {
-	float: right;
+	margin-left: 16px;
 	width: 96px;
-	height: 48px;
+	height: 24px;
 }
 
 #newPlaylist {
-	margin-top: 16px;
-	width: calc(256px - 32px);
+	margin-top: 4px;
+	width: 100%;
+	font-size: 0;
 }
 
 #newPlaylistName {
-	display: block;
-	width: calc(256px - 48px - 64px);
-	height: 24px;
-	border: 1px solid var(--mg);
-	padding: 2px;
+	width: calc(100% - 16px - 64px);
 }
 
 #newPlaylistButton {
-	float: right;
+	margin-left: 16px;
 	width: 64px;
 	height: 24px;
 }
@@ -157,6 +160,7 @@ button {
 
 .delete {
 	float: right;
+	margin-left: 16px;
 	width: 16px;
 	height: 16px;
 	font-size: 16px;
